[package]
name = "rlox"
version = "0.1.0"
authors = ["Daniel Hofstetter <daniel.hofstetter@42dh.com>"]
edition = "2021"
description = "An interpreter for the Lox language (based on the book 'Crafting Interpreters')"
license = "MIT"
repository = "https://github.com/cakebaker/rlox"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
